syntax = "proto3";

option go_package = "github.com/KKKKjl/tinykit/example/rpc/helloworld";

package helloworld;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

service StreamService {
  rpc StreamRpc (ServerStreamData) returns (stream ServerStreamData) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

message ServerStreamData{
  string msg = 1;
}